--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap");
 .App {
   max-width: 600px;
+  margin: 0 auto;
 }
 a {
   text-decoration: none;
