--- a/src/weather.css
+++ b/src/weather.css
@@ -1,6 +1,7 @@
 body {
     padding-top: 25px;
     font-family: "Montserrat, sans-serif";
+    background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
     
 }
 
