--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,8 @@ a {
 color: hsl(0, 0%, 0%);
 font-weight: bolder;
 }
+
+.container {
+  margin-left: 5px;
+  background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
+}
